<resources>
    <string name="app_name">Time Tracker</string>
    <string name="authorization_manual">Input time</string>
    <string name="authorization_start_working">Start timer</string>
    <string name="authorization_show_work_time">Show time</string>
    <string name="authorization_log_in">Log in</string>
    <string name="authorization_switch_accounts">Switch accounts</string>
    <string name="authorization_about">About</string>
    <string name="authorization_timer_active">Active timer</string>
    <string name="authorization_error_no_internet">Connect to internet and try again</string>
    <string name="authorization_permission_google">This app needs to access your Google account (via Contacts)</string>
    <string name="authorization_error_google">Please install Google Play services from App store and relaunch app</string>
    <string name="authorization_error_general">Please try again</string>
    <string name="accouthelper_btn_getAccount">Get account</string>
    <string name="list_time_data_comment">Comment: </string>
    <string name="time_list_sum">All: </string>
    <string name="time_list_average">Average: </string>
    <string name="sheet_list_no_sheets_message">Uh oh, do not have any any sheets. Create new one</string>
    <string name="sheet_list_no_sheets_create">Create Sheet</string>
    <string name="timer_button_start">Start</string>
    <string name="about_author">Author: Tuukka Juusela</string>
    <string name="about_project_description">This project is created for mobile programming course in Tampere
    University of applied sciences as part of degree programme in business information systems. </string>
    <string name="about_app_apis">Application uses Google Sheets and Google Drive API. Google Sheets API
    is used to read and write users Sheets. Google Drive API is used to searching and creating
    Sheet files. </string>
    <string name="about_app_help">Time Tracker creates new folder to your Google Drive with name
        "time-tracker" and uses its files from there. Time Tracker searches and uses Sheets files which start with
        "time-tracker-". If you want to delete your time tracking files you can delete files in your
        Google Drive (Remember to remove it from your Google Drive Bin too!). You can also manually input time
        into Sheets files but it is recommended to use application for this.</string>
    <string name="about_title">About</string>
    <string name="createsheet_title">Create Sheet</string>
    <string name="createsheet_error_no_name">Enter longer Sheet name</string>
    <string name="createsheet_error_name_already_taken">File with that name already exists</string>
    <string name="createsheet_file_created">File created!</string>
    <string name="createsheet_error_general">Failed to create file. Check your connection status</string>
    <string name="createsheet_enter_name">Enter name of the Sheet</string>
    <string name="createsheet_hint">Sheet name</string>
    <string name="createsheet_create">Create</string>
    <string name="createsheet_cancel">Cancel</string>
    <string name="manualtimeinput_success">Data uploaded</string>
    <string name="manualtimeinput_error_general">Upload failed. Check your connection status</string>
    <string name="manualtimeinput_title_time">Time</string>
    <string name="manualtimeinput_title_comment">Comment</string>
    <string name="manualtimeinput_title_date">Date</string>
    <string name="manualtimeinput_slider_hours">Hours</string>
    <string name="manualtimeinput_slider_minutes">Minutes</string>
    <string name="manualtimeinput_comment_hint">Spent time doing things such as...</string>
    <string name="manualtimeinput_default_time">00:00</string>
    <string name="sheetlist_title_timer">Timer</string>
    <string name="sheetlist_title_time_input">Time input</string>
    <string name="sheetlist_title_show_time">Show time</string>
    <string name="timelist_error_empty">Uh oh... You do not have any time information in this Sheet. Try Timer or Time input from main menu.</string>
    <string name="timelist_error_fail_general">Please try again later</string>
    <string name="timer_text_end">End</string>
    <string name="timer_text_start">Start</string>
    <string name="timer_start">START</string>
    <string name="timer_time">TIME</string>
    <string name="upload_error_general">Upload failed. Check connection</string>
    <string name="upload_success">Upload successful</string>
    <string name="upload_save">Save</string>
    <string name="upload_back">Back to timer</string>
    <string name="upload_delete">Delete current session</string>
    <string name="upload_comment">Comment: </string>
    <string name="upload_comment_hint">I used my time on...</string>
    <string name="notification_content">Started tracking time</string>
    <string name="error_general">Something went wrong. Relaunch application</string>
    <string name="timelist_remove_data_success">Time entry removed</string>
    <string name="timelist_remove_data_failure">Couldn\'t remove time entry</string>
</resources>
