<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.Authorization">

    <Button android:id="@+id/getAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/accouthelper_btn_getAccount"
        android:onClick="buttonClick"/>



    <Button android:id="@+id/getSheets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:onClick="buttonClick"
        android:text="@string/authorization_start_working"/>

    <Button android:id="@+id/getFiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:onClick="buttonClick"
        android:text="@string/authorization_manual"/>

    <Button android:id="@+id/getFolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:onClick="buttonClick"
        android:text="@string/authorization_show_work_time"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <ImageView android:id="@+id/accountIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_perm_identity_black_24dp"
            android:visibility="invisible"/>

        <TextView android:id="@+id/accountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#000"/>


    </LinearLayout>

</LinearLayout>