<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_margin="30pt"
            >
            <TextView android:id="@+id/timer-time-title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer_time"
                android:textSize="15pt"/>
            <TextView android:id="@+id/timer-time-text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12.5pt" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_margin="30pt"
            >
            <TextView   android:id="@+id/start-title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15pt"
                android:text="@string/timer_start"/>
            <TextView android:id="@+id/start-text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12.5pt"
                android:text=""/>
        </LinearLayout>
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/end_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_gravity="center_horizontal"
        app:backgroundTint="@color/colorAccent"/>
    <TextView android:id="@+id/timer_txt_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/timer_button_start"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>